fix: 修改了message的数据模型
